--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,20 @@
 .crossed {
   text-decoration: line-through;
 }
+
+.fade-out {
+  animation: fadeIn 1s;
+  -webkit-animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+  -ms-animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
