--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,17 @@ body {
 
 header {
   padding-top: 2em;
+  margin: 0 9em;
+}
+
+header p {
+  font-weight: 300;
+  line-height: 1.5em;
 }
 
 h1 {
   font-size: 2em;
+  margin-bottom: 0.1em;
 }
 
 #task-maker {
