--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,11 @@ h1 {
   margin-bottom: 0.5em;
 }
 
+#custom-task {
+  border: 1px solid rgba(0, 0, 0, 0.333);
+  border-radius: 5px;
+}
+
 #add {
   border: 1px solid rgba(0, 0, 0, 0.333);
   border-radius: 5px;
